syntax = "proto3";

import "google/protobuf/empty.proto";

package pizzeria;

option java_multiple_files = true;
option java_package = "edu.bfdestroyeer.pizzeria";
option java_outer_classname = "PizzeriaServiceProto";

message IdResponse {
  int64 id = 1;
}

message StatusReponse {
  int64 status = 1;
}

message MenuResponse {
  message MenuElement {
    int64 id = 1;
    string name = 2;
    string description = 3;
    int64 cost = 4;
  }
  repeated MenuElement menuElement = 1;
}

message OrderResponse {
  int64 id = 1;
  int64 cost = 2;
}

message OrderStatusResponse {
  int32 orderStatus = 1;
}

message AddPizzaToMenuRequest {
  string name = 1;
  string description = 2;
  int64 cost = 3;
}

message RemovePizzaFromMenuRequest {
  int64 id = 1;
}

message MakeOrderRequest {
  message OrderPosition {
    int64 pizzaId = 1;
    int64 count = 2;
  }
  repeated OrderPosition orderPosition = 1;
}

message UpdateOrderStatusRequest {
  int64 orderId = 1;
  int32 orderStatus = 2;
}

message GetOrderStatusRequest {
  int64 orderId = 1;
}

service PizzeriaService {
  rpc addPizzaToMenu(AddPizzaToMenuRequest) returns (IdResponse);
  rpc removePizzaFromMenu(RemovePizzaFromMenuRequest) returns (StatusReponse);
  rpc getMenu(google.protobuf.Empty) returns (MenuResponse);
  rpc makeOrder(MakeOrderRequest) returns (OrderResponse);
  rpc updateOrderStatus(UpdateOrderStatusRequest) returns (google.protobuf.Empty);
  rpc getOrderStatus(GetOrderStatusRequest) returns (OrderStatusResponse);
}